--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -54,8 +54,7 @@
             tools:layout_editor_absoluteX="223dp"
             tools:layout_editor_absoluteY="238dp" />
     </LinearLayout>
+</LinearLayout>
 
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
