--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,54 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-   <TextView
-        android:id="@+id/previousChoice"
+
+    <Button
+        android:id="@+id/home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vous avez choisi la porte : "
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="20dp"
-
-        />
+        android:backgroundTint="@color/greenEA"
+        android:onClick="onClick"
+        android:text="Rejouer"
+        tools:layout_editor_absoluteX="223dp"
+        tools:layout_editor_absoluteY="238dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/win"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Vous avez gagné ! "
 
-        android:text="Voulez-vous garder votre choix?"
-        tools:layout_editor_absoluteX="95dp"
-        tools:layout_editor_absoluteY="223dp" />
+        android:textSize="20sp"
+        android:visibility="visible" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/lost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:paddingTop="40dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="249dp">
+        android:layout_marginTop="50dp"
 
-        <Button
-            android:id="@+id/yes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:backgroundTint="#020202"
-            android:onClick="onClick"
-            android:text="Je garde"
-            tools:layout_editor_absoluteX="66dp"
-            tools:layout_editor_absoluteY="238dp" />
+        android:text="Vous avez perdu "
+        android:textSize="20sp"
+        android:visibility="visible" />
 
-        <Button
-            android:id="@+id/no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:backgroundTint="#F44336"
-            android:onClick="onClick"
-            android:text="Je change"
-            tools:layout_editor_absoluteX="223dp"
-            tools:layout_editor_absoluteY="238dp" />
-    </LinearLayout>
+    <ImageView
+            android:id="@+id/car"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="50dp"
+            android:visibility="invisible"
+            app:srcCompat="@mipmap/ic_launcher" />
+
+
+
+
+        <ImageView
+            android:id="@+id/image_result"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="30dp"
+            android:visibility="invisible"
+            app:srcCompat="@mipmap/ic_launcher" />
+
 </LinearLayout>
 
 
