--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,6 +6,78 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingTop="100dp">
+
+        <TextView
+            android:id="@+id/previousChoice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Vous avez choisi la porte : "
+
+            />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+
+            android:text="Voulez-vous garder votre choix?" />
+
+        <Button
+            android:id="@+id/no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:backgroundTint="#F44336"
+            android:onClick="onClick"
+            android:text="Je change"
+            tools:layout_editor_absoluteX="223dp"
+            tools:layout_editor_absoluteY="238dp" />
+
+        <Button
+            android:id="@+id/yes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:backgroundTint="@color/greenEA"
+            android:onClick="onClick"
+            android:text="Je garde"
+            tools:layout_editor_absoluteX="66dp"
+            tools:layout_editor_absoluteY="238dp" />
+    </LinearLayout>
+
+    <!--<ImageView
+        android:id="@+id/image_result"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:visibility="invisible"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/win"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Vous avez gagné ! "
+
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/lost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+
+        android:text="Vous avez perdu ... "
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/home"
@@ -17,48 +89,5 @@
         android:onClick="onClick"
         android:text="Rejouer"
         tools:layout_editor_absoluteX="223dp"
-        tools:layout_editor_absoluteY="238dp" />
-
-    <TextView
-        android:id="@+id/win"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="Vous avez gagné ! "
-
-        android:textSize="20sp"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/lost"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-
-        android:text="Vous avez perdu "
-        android:textSize="20sp"
-        android:visibility="visible" />
-
-    <ImageView
-            android:id="@+id/car"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="50dp"
-            android:visibility="invisible"
-            app:srcCompat="@mipmap/ic_launcher" />
-
-
-
-
-        <ImageView
-            android:id="@+id/image_result"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="30dp"
-            android:visibility="invisible"
-            app:srcCompat="@mipmap/ic_launcher" />
-
+        tools:layout_editor_absoluteY="238dp" />-->
 </LinearLayout>
-
-
-
