--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="400dp"
         android:backgroundTint="@color/black"
         android:onClick="onClick"
         android:text="Rejouer"
@@ -36,9 +36,9 @@
         android:id="@+id/lost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
 
-        android:text="Vous avez perdu "
+        android:layout_marginTop="200dp"
+        android:text="Vous avez perdu! "
         android:textSize="20sp"
         android:visibility="visible" />
 
